argocdingress/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: argocdingress
# spec:
#   ingressClassName: nginx # use only with k8s version >= 1.18.0
#   tls:
#   rules:
#   - host: cid.cessmedia.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: argocd-server
#             port:
#               number: 443

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocdingress
  # labels:
  #   app: argocd-server
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-staging # important!!!
    # nginx.ingress.kubernetes.io/app-root: /
    cert-manager.io/acme-challenge-type: http01
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    acme.cert-manager.io/http01-edit-in-place: "true" # important!!!
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - cid.cessmedia.com
      secretName: argocd-tls  
  rules:
  - host: cid.cessmedia.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            # port:
              # name:
              #   https
            port:
              number: 443
